--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
     --GRAY: #EFEFEF;
     --GREEN_PRIMARY: #30403B;
     --GREEN_SECONDARY: #56BFA1;
+    --GREEN_TERTIARY: #8FBFB2;
+    --GREEN_TERTIARY_OPACITY: #8fbfb298;
+    --GREEN_PRIMARY_OPACITY: #30403b80;
 }
 
 header {
@@ -67,6 +70,101 @@ header section i:hover {
     left: 25px;
 }
 
+main {
+    padding: 0 58px;
+    font-family: "Noto Sans", sans-serif;
+    color: var(--GREEN_PRIMARY);
+}
+
 .iconCart {
     margin-right: 15px;
+}
+
+.slider {
+    overflow: hidden;
+    margin-top: 76px;
+    position: relative;
+}
+
+.imgsSlider {
+    display: flex;
+    transform: translateX(0);
+    transition: .5s ease-in-out;
+}
+
+.imgsSlider > img {
+    width: 100%;
+    min-height: 200px;
+    object-fit: cover;
+}
+
+.sliderComponents {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    top: 0;
+    padding: 20px;
+}
+
+.btnsSlider {
+    justify-content: space-between;
+    align-items: center;
+    z-index: 2;
+}
+
+.btnsSlider > button {
+    border: 0;
+    background: var(--GREEN_TERTIARY_OPACITY);
+    color: var(--GREEN_PRIMARY);
+    font-size: 2.2em;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.btnsSlider > button:hover {
+    background: var(--GREEN_TERTIARY);
+}
+
+.indexes {
+    align-items: flex-end;
+    justify-content: center;
+    gap: 10px;
+}
+
+.indexes > div {
+    width: 20px;
+    height: 20px;
+    background: var(--GREEN_TERTIARY_OPACITY);
+    border-radius: 50%;
+}
+
+.indexes > div:nth-child(1) {
+    background: var(--GREEN_SECONDARY);
+}
+
+.ProductsList {
+    padding-top: 25px;
+}
+
+.ProductsList > h2 {
+    text-align: center;
+}
+
+.line {
+    border-top: 1px solid var(--GREEN_PRIMARY_OPACITY);
+    flex: 1;
+}
+
+.paragrathWithLines {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.paragrathWithLines > p {
+    text-align: center;
+    font-size: 1.1em;
 }
