--- a/style.css
+++ b/style.css
@@ -183,3 +183,17 @@ main {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.212);
     border-radius: 10px;
 }
+
+.product > img {
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+}
+
+.product p:nth-of-type(2) {
+    font-weight: bold;
+    text-align: center;
+}
+
+.productInfos {
+    padding: 10px;
+}
