--- a/style.css
+++ b/style.css
@@ -11,8 +11,11 @@
     --GREEN_PRIMARY: #30403B;
     --GREEN_SECONDARY: #56BFA1;
     --GREEN_TERTIARY: #8FBFB2;
+    --GREEN_QUATERNARY: #3E8A75;
+    --GREEN_QUINARY: #56736B;
     --GREEN_TERTIARY_OPACITY: #8fbfb298;
     --GREEN_PRIMARY_OPACITY: #30403b80;
+    --SHADOW-PRIMARY: 2px 2px 8px rgba(0, 0, 0, 0.212);
 }
 
 header {
@@ -71,7 +74,7 @@ header section i:hover {
 }
 
 main {
-    padding: 0 58px;
+    padding: 76px 58px 0 58px;
     font-family: "Noto Sans", sans-serif;
     color: var(--GREEN_PRIMARY);
 }
@@ -82,7 +85,6 @@ main {
 
 .slider {
     overflow: hidden;
-    margin-top: 76px;
     position: relative;
 }
 
@@ -171,29 +173,98 @@ main {
 
 .products {
     display: flex;
-    gap: 50px;
+    gap: 40px;
     flex-wrap: wrap;
     justify-content: center;
     padding: 40px 0;
 }
 
 .product {
-    width: 270px;
+    width: 278px;
     height: 350px;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.212);
+    box-shadow: var(--SHADOW-PRIMARY);
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
 }
 
 .product > img {
-    width: 100%;
+    height: 180px;
+    object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
 
-.product p:nth-of-type(2) {
-    font-weight: bold;
-    text-align: center;
+.productInfos {
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
-.productInfos {
+.buttonAndPrice > p {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.3em;
+}
+
+.buttonAndPrice > button {
+    display: block;
+    margin: auto;
+    width: 100%;
+    border: 0;
+    background: var(--GREEN_SECONDARY);
+    color: white;
+    font: bold 1em "Noto Sans", sans-serif;
+    padding: 10px 0;
+    border-radius: 5px;
+    margin-top: 5px;
+    cursor: pointer;
+}
+
+.buttonAndPrice > button:hover {
+    background: var(--GREEN_QUATERNARY);
+}
+
+footer {
+    background-color: var(--GREEN_QUINARY);
+    text-align: center;
+    color: white;
+    box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.329);
+    font-family: "Noto Sans", sans-serif;
+}
+
+footer > p {
     padding: 10px;
+}
+
+footer > nav {
+    padding: 20px;
+}
+
+footer > nav > a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0px 15px;
+}
+
+footer > nav > a:hover {
+    text-decoration: underline;
+}
+
+@media screen and (max-width: 490px) {
+    footer > nav > a {
+        display: block;
+        padding: 5px;
+    }
+
+    .slider {
+        display: none;
+    }
+
+    .ProductsList {
+        padding-top: 0;
+    }
 }
