--- a/styles/product.css
+++ b/styles/product.css
@@ -4,6 +4,13 @@ main {
     color: var(--GREEN_PRIMARY);
 }
 
+body > iframe:nth-child(1) {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+}
+
 .imageAndInfos {
     display: flex;
 }
