--- a/styles/product.css
+++ b/styles/product.css
@@ -4,30 +4,91 @@ main {
     color: var(--GREEN_PRIMARY);
 }
 
-body > iframe:nth-child(1) {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    z-index: 100;
-}
-
 .imageAndInfos {
     display: flex;
+    height: 380px;
 }
 
-.information > button {
-    display: block;
-    font-family: "Noto Sans", sans-serif;
+.imageAndInfos > figure {
+   width: 650px;
+}
+
+.imageAndInfos > figure > img {
+    width: 100%;
+    height: 380px;
+    object-fit: cover;
+}
+
+.information {
+    padding-left: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.btnsProduct > button:nth-of-type(1) {
+    margin-bottom: 20px;
+} 
+
+.buttonProduct {
+    display: flex;
+    font: bold 1.3em "Noto Sans", sans-serif;
     color: white;
-    font-weight: bold;
     border: 0;
     background: var(--GREEN_TERTIARY);
+    width: 500px;
+    padding: 15px 0;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    cursor: pointer;
 }
 
-.information > p:nth-child(1) {
-    color: var(--GREEN_SECONDARY);
+.buttonProduct:hover {
+    background: var(--GREEN_QUATERNARY);
 }
 
-.information > h1 {
+.buttonProduct > img {
+    width: 30px;
+}
+
+.informationHeader > h1 {
+    font-size: 1.7em;
     font-weight: normal;
+}
+
+.informationHeader > h2 {
+    font-size: 1.7em;
+}
+
+.moreProducts {
+    color: var(--GREEN_SECONDARY);
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    font-size: 1.7em;
+}
+
+.moreProducts:hover {
+    color: var(--GREEN_QUATERNARY);
+}
+
+.moreProducts > img {
+    width: 50px;
+    padding-right: 15px;
+}
+
+.description {
+    padding-top: 40px;
+}
+
+.descriptionWithLine {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.descriptionWithLine > div {
+    flex: 1;
+    border-top: 1px solid var(--GREEN_PRIMARY_OPACITY);
 }
