--- a/styles/product.css
+++ b/styles/product.css
@@ -10,9 +10,8 @@ main {
 }
 
 .imageAndInfos > figure {
-   max-width: 650px;
-   flex: 1;
-
+   max-width: 700px;
+   width: 100%;
 }
 
 .imageAndInfos > figure > img {
@@ -46,7 +45,7 @@ main {
     border: 0;
     background: var(--GREEN_TERTIARY);
     width: 100%;
-    max-width: 500px;
+    width: 500px;
     padding: 15px 0;
     align-items: center;
     justify-content: center;
@@ -109,11 +108,16 @@ main {
     display: flex;
     align-items: center;
     gap: 10px;
+    padding-bottom: 3px;
 }
 
 .descriptionWithLine > div {
     flex: 1;
     border-top: 1px solid var(--GREEN_PRIMARY_OPACITY);
+}
+
+.description > p {
+    font-size: 1.1em;
 }
 
 @media screen and (max-width: 1070px) {
@@ -137,8 +141,19 @@ main {
     }
 
     .imageAndInfos > figure {
-        max-width: auto;
+        max-width: 100%;
         width: 100%;
         flex: 1; 
+    }
+
+    .buttonProduct {
+        width: 100%;
+        max-width: 500px;
+    }
+}
+
+@media screen and (max-width: 388px) {
+    .btnsProduct > button:nth-of-type(1) {
+        font-size: .9em;
     }
 }
