--- a/styles/headerAndFooter.css
+++ b/styles/headerAndFooter.css
@@ -57,16 +57,42 @@ header section i:hover {
 }
 
 .searchContainer {
+    margin-left: 10px;
+    width: 100%;
+    max-width: 300px;
+    display: none;
+    align-items: center;
     position: absolute;
-    display: flex;
-    flex-direction: row-reverse;
-    top: 53px;
-    right: -17px;
+    right: 4px;
+    top: 60px;
 }
 
-.searchContainer > img {
+.searchContainer > input {
+    width: 100%;
+    height: 40px;
+    font-size: 1.1em;
+    outline: 3px solid var(--GRAY);
+    border: 0;
+    padding-left: 5px;
+}
+
+.searchContainer > input:focus {
+    outline: 3px solid var(--GREEN_TERTIARY);
+}
+
+.searchContainer > button {
+    border: 0;
+    cursor: pointer;
     position: absolute;
-    pointer-events: none;
+    right: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 1.1em;
+    background: var(--GRAY);
+}
+
+.searchContainer > button:hover {
+    background: var(--GREEN_TERTIARY_OPACITY);
 }
 
 footer {
