add height responsive header

--- a/styles/index.css
+++ b/styles/index.css
@@ -152,6 +152,12 @@ main {
     background: var(--GREEN_QUATERNARY);
 }
 
+@media screen and (max-width: 780px) {
+    main {
+        padding: 104px 58px 0 58px;
+    }
+}
+
 @media screen and (max-width: 490px) {
 
     .slider {
