--- a/styles/headerAndFooter.css
+++ b/styles/headerAndFooter.css
@@ -6,6 +6,7 @@ header {
     justify-content: space-between;
     width: 100%;
     z-index: 100;
+    gap: 10px;
     padding: 5px 17px 5px 25px;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.219);
     top: 0px;
@@ -19,19 +20,20 @@ header > h1 > a {
     font-weight: normal;
 }
 
-header section {
+.iconCart {
     position: relative;
     display: flex;
+    text-decoration: none;
 }
 
-header section i {
-    font-size: 1.9em;
+.iconCart i {
+    font-size: 2.3em;
     color: var(--GREEN_PRIMARY);
     padding: 8px;
     cursor: pointer;
 }
 
-header section i:hover {
+.iconCart i:hover {
     background: var(--GRAY);
     border-radius: 5px;
 }
@@ -49,50 +51,43 @@ header section i:hover {
     font: bold .9em var(--FONT-DEFAULT);
     top: 3px;
     pointer-events: none;
-    left: 25px;
-}
-
-.iconCart {
-    margin-right: 15px;
+    left: 33px;
 }
 
 .searchContainer {
-    margin-left: 10px;
-    width: 100%;
-    max-width: 400px;
-    display: none;
+    display: flex;
     align-items: center;
-    position: absolute;
-    right: 4px;
-    top: 60px;
+    width: 500px;
 }
 
 .searchContainer > input {
-    width: 100%;
-    height: 40px;
+    font-family: "Noto Sans", sans-serif;
     font-size: 1.1em;
-    outline: 3px solid var(--GRAY);
+    height: 40px;
+    width: 100%;
+    max-width: 500px;
+    padding-left: 10px;
     border: 0;
-    padding-left: 5px;
+    outline: 3px solid var(--GREEN_TERTIARY_OPACITY);
+    border-radius: 10px 0 0 10px;
 }
 
 .searchContainer > input:focus {
-    outline: 3px solid var(--GREEN_TERTIARY);
+    outline: 3px solid var(--GREEN_SECONDARY);
 }
 
 .searchContainer > button {
-    border: 0;
+    height: 46px;
+    width: 46px;
+    font-size: 1.3em;
     cursor: pointer;
-    position: absolute;
-    right: 10px;
-    padding: 5px;
-    border-radius: 5px;
-    font-size: 1.1em;
+    border: 0;
     background: var(--GRAY);
+    border-radius: 0 10px 10px 0 ;
 }
 
 .searchContainer > button:hover {
-    background: var(--GREEN_TERTIARY_OPACITY);
+    background: var(--GREEN_TERTIARY);
 }
 
 footer {
@@ -120,6 +115,10 @@ footer > nav > a {
 
 footer > nav > a:hover {
     text-decoration: underline;
+}
+
+@media screen and (max-width: 500px) {
+    
 }
 
 @media screen and (max-width: 490px) {
