--- a/styles/product.css
+++ b/styles/product.css
@@ -153,6 +153,12 @@ main {
     }
 }
 
+@media screen and (max-width: 780px) {
+    main {
+        padding: 122px 20px 20px 20px;
+    }
+}
+
 @media screen and (max-width: 388px) {
     .btnsProduct > button:nth-of-type(1) {
         font-size: .9em;
