--- a/styles/product.css
+++ b/styles/product.css
@@ -1,6 +1,58 @@
+body {
+    min-height: 100vh;
+    position: relative;
+}
+
 main {
     padding: 86px 20px 20px 20px;
-    font-family: "Noto Sans", sans-serif;
+    font-family: var(--FONT-DEFAULT);
+    color: var(--GREEN_PRIMARY);
+}
+
+.modalBackground {
+    display: none;
+    position: absolute;
+    top: 0;
+    z-index: 6;
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+}
+
+.flexModal {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal {
+    background: white;
+    opacity: 1;
+    font-family: var(--FONT-DEFAULT);
+    padding: 30px 18px;
+    border-radius: 10px;
+}
+
+.modal button {
+    margin: 35px auto 0 auto;
+    display: block;
+    font: bold 1.5em var(--FONT-DEFAULT);
+    color: white;
+    border: 0;
+    background: var(--GREEN_SECONDARY);
+    padding: 5px 40px;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+.modal button:hover {
+    background: var( --GREEN_QUATERNARY);
+}
+
+.modal h2 {
+    font-weight: normal;
+    font-size: 1.6em;
     color: var(--GREEN_PRIMARY);
 }
 
@@ -40,7 +92,7 @@ main {
 
 .buttonProduct {
     display: flex;
-    font: bold 1.3em "Noto Sans", sans-serif;
+    font: bold 1.3em var(--FONT-DEFAULT);
     color: white;
     border: 0;
     background: var(--GREEN_TERTIARY);
