--- a/styles/product.css
+++ b/styles/product.css
@@ -26,15 +26,84 @@ main {
     justify-content: center;
 }
 
-.modal {
+.addModal {
+    display: none;
     background: white;
-    opacity: 1;
+    font-family: var(--FONT-DEFAULT);
+    color: var(--GREEN_PRIMARY);
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 18px;
+    border-radius: 10px;
+    gap: 15px;
+    margin: 10px;
+}
+
+.quantityAddModal {
+    color: var(--GREEN_QUATERNARY);
+    display: flex;
+    align-items: center;
+}
+
+.quantityAddModal > span {
+    font-size: 3em;
+    padding: 0 20px;
+}
+
+.quantityAddModal button {
+    border: 0;
+    background: transparent;
+    cursor: pointer;
+    color: var(--GREEN_QUATERNARY);
+    font-size: 2em;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.quantityAddModal button:hover {
+    background: var(--GREEN_TERTIARY_OPACITY);
+    border-radius: 50%;
+}
+
+.addModal h2 {
+    font-weight: normal;
+}
+
+.btnsAddModal {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+}
+
+.btnsAddModal button {
+    border: 0;
+    font: bold 1.7em var(--FONT-DEFAULT);
+    width: 150px;
+    border-radius: 20px;
+    padding: 5px 0;
+    cursor: pointer;
+    color: white;
+    background: var(--GREEN_SECONDARY);
+}
+
+.btnsAddModal button:hover {
+    background: var(--GREEN_QUATERNARY);
+}
+
+.buyModal {
+    display: none;
+    background: white;
     font-family: var(--FONT-DEFAULT);
     padding: 30px 18px;
     border-radius: 10px;
+    margin: 10px;
 }
 
-.modal button {
+.buyModal button {
     margin: 35px auto 0 auto;
     display: block;
     font: bold 1.5em var(--FONT-DEFAULT);
@@ -46,11 +115,11 @@ main {
     cursor: pointer;
 }
 
-.modal button:hover {
+.buyModal button:hover {
     background: var( --GREEN_QUATERNARY);
 }
 
-.modal h2 {
+.buyModal h2 {
     font-weight: normal;
     font-size: 1.6em;
     color: var(--GREEN_PRIMARY);
