--- a/styles/headerAndFooter.css
+++ b/styles/headerAndFooter.css
@@ -11,7 +11,7 @@ header {
     width: 100%;
     z-index: 5;
     gap: 10px;
-    padding: 5px 17px 5px 25px;
+    padding: 5px 19px 5px 27px;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.219);
     top: 0px;
     left: 0px;
@@ -19,9 +19,8 @@ header {
 
 header > h1 > a {
     text-decoration: none;
-    font-family: var(--FONT-HIGHLIGHT);
+    font: normal 1.1em var(--FONT-HIGHLIGHT);
     color: black;
-    font-weight: normal;
 }
 
 .iconCart {
@@ -31,7 +30,7 @@ header > h1 > a {
 }
 
 .iconCart i {
-    font-size: 2.3em;
+    font-size: 2.6em;
     color: var(--GREEN_PRIMARY);
     padding: 8px;
     cursor: pointer;
@@ -47,21 +46,22 @@ header > h1 > a {
     align-items: center;
     justify-content: center;
     position: absolute;
-    width: 23px;
-    height: 23px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%;
     background: var(--GREEN_SECONDARY);
     color: white;
     font: bold 1em var(--FONT-DEFAULT);
     top: 1px;
     pointer-events: none;
-    left: 33px;
+    left: 38px;
 }
 
 .searchContainer {
     display: flex;
     align-items: center;
     width: 500px;
+    gap: 3px;
 }
 
 .searchContainer > input {
@@ -73,7 +73,7 @@ header > h1 > a {
     padding-left: 10px;
     border: 0;
     outline: 3px solid var(--GREEN_TERTIARY_OPACITY);
-    border-radius: 10px 0 0 10px;
+    border-radius: 5px 0 0 5px;
 }
 
 .searchContainer > input:focus {
@@ -82,12 +82,12 @@ header > h1 > a {
 
 .searchContainer > button {
     height: 46px;
-    width: 46px;
+    width: 60px;
     font-size: 1.3em;
     cursor: pointer;
     border: 0;
     background: var(--GRAY);
-    border-radius: 0 10px 10px 0 ;
+    border-radius: 0 5px 5px 0;
 }
 
 footer {
