--- a/styles/headerAndFooter.css
+++ b/styles/headerAndFooter.css
@@ -43,7 +43,7 @@ header > h1 > a {
 }
 
 .cartQuantity {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     position: absolute;
