--- a/styles/modal.css
+++ b/styles/modal.css
@@ -5,7 +5,7 @@ body {
 
 .modalBackground {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 6;
     background: rgba(0,0,0,0.5);
