--- a/styles/shopcart.css
+++ b/styles/shopcart.css
@@ -38,8 +38,8 @@ main {
 .quantity {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     font-weight: bold;
-    gap: 15px;
 }
 
 .quantityContainer {
@@ -262,7 +262,6 @@ footer {
     .quantity {
         flex-direction: column;
         align-items: flex-start;
-        gap: 0px;
     }
 
     .quantityContainer {
