first page with position sticky

--- a/styles/headerAndFooter.css
+++ b/styles/headerAndFooter.css
@@ -3,7 +3,7 @@
 }
 
 header {
-    position: fixed;
+    position: sticky;
     background-color: white;
     display: flex;
     align-items: center;
