--- a/styles/shopcart.css
+++ b/styles/shopcart.css
@@ -190,6 +190,18 @@ footer {
 }
 
 @media screen and (max-width: 1280px) {
+    .priceAndQuantityResponsive {
+        display: block;
+    }
+
+    .paymentInformation > p:nth-of-type(1) {
+        display: none;
+    }
+
+    .paymentInformation > p:nth-of-type(2) {
+        display: none;
+    }
+
     .allInfos {
         flex-direction: column;
     }
@@ -202,14 +214,15 @@ footer {
 
     .infos > p {
         width: 100%;
+        text-align: center;
     }
 
     .paymentInformation {
         position: static;
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        gap: 15px;
+        justify-content: space-evenly;
+        gap: 10px;
         width: 100%;
         margin: 0;
         border-radius: 0;
@@ -223,30 +236,64 @@ footer {
     .moreProducts {
         flex-direction: column-reverse;
         gap: 10px;
+        text-align: center;
+    }
+
+    .moreProducts > span {
+        font-size: .9em;
+    }
+
+    .moreProducts > svg {
+        width: 35px;
+        height: 35px;
+    }
+
+    .btnsPayment {
+        margin: 0 10px;
     }
 
     .btnsPayment > button {
-        padding: 5px;
+        padding: 5px 15px;
+    }
+
+    .quantity {
+        width: 715px;
+        margin: auto;
     }
 }
 
 @media screen and (max-width: 690px) {
-    .priceAndQuantityResponsive {
-        display: block;
-    }
-
-    .paymentInformation > p:nth-of-type(1) {
-        display: none;
-    }
-
-    .paymentInformation > p:nth-of-type(2) {
-        display: none;
-    }
 
     .moreProducts {
         max-width: 82px;
     }
 
+}
+
+@media screen and (max-width: 780px) {
+    .quantity {
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: center;
+        width: initial;
+    }
+
+    .quantityContainer {
+        margin-top: -5px;
+    }
+
+    .quantity > p:nth-child(1) {
+        margin-right: 0;
+        width: initial; 
+    }
+
+    .infos {
+        align-self: flex-start;
+    }
+
+    .infos > p {
+        text-align: initial;
+    }
 }
 
 @media screen and (max-width: 550px) {
@@ -259,20 +306,7 @@ footer {
     }
 }
 
-@media screen and (max-width: 477px) {
-    .quantity {
-        flex-direction: column;
-        align-items: flex-start;
-        text-align: center;
-    }
-
-    .quantityContainer {
-        margin-top: -5px;
-    }
-
-}
-
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 370px) {
 
     .paymentInformation {
         font-size: 1.1em;
